WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31783
[Qt] DumpRenderTree should explicitly ignore SSL certificate errors
https://bugs.webkit.org/show_bug.cgi?id=31783
Summary
[Qt] DumpRenderTree should explicitly ignore SSL certificate errors
Jakub Wieczorek
Reported
2009-11-22 04:26:18 PST
Currently all the http/ssl tests are timing out. One of the reasons is that HTTPS errors are not ignored which prevent the tests from proceeding. This is similar to
https://bugs.webkit.org/show_bug.cgi?id=31200
and
http://trac.webkit.org/changeset/50783
.
Attachments
proposed patch
(5.59 KB, patch)
2009-11-22 04:29 PST
,
Jakub Wieczorek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jakub Wieczorek
Comment 1
2009-11-22 04:29:31 PST
Created
attachment 43674
[details]
proposed patch
Antonio Gomes
Comment 2
2009-11-22 13:37:01 PST
should not it be simpler to add an ignoreSslErrors method in the already existent WebPage class ( that inherits QWebPage ). of course, if more stuff are to be added do this NetworkAccessManager class, then lets keep it. /me trying to avoid introducing a new class only for this. not setting CQ+ due to this.
Jakub Wieczorek
Comment 3
2009-11-22 13:40:22 PST
(In reply to
comment #2
)
> should not it be simpler to add an ignoreSslErrors method in the already > existent WebPage class ( that inherits QWebPage ). > > of course, if more stuff are to be added do this NetworkAccessManager class, > then lets keep it.
Yes, I was going to add support for authentication challenges as well.
> > /me trying to avoid introducing a new class only for this. > > not setting CQ+ due to this.
WebKit Commit Bot
Comment 4
2009-11-22 14:29:18 PST
Comment on
attachment 43674
[details]
proposed patch Clearing flags on attachment: 43674 Committed
r51298
: <
http://trac.webkit.org/changeset/51298
>
WebKit Commit Bot
Comment 5
2009-11-22 14:29:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug